# Etravel_desktopapp

login/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  depart.txt  login.glade.bak  login.gladep.bak  retour.txt
login/autom4te.cache/: output.0  requests  traces.0  traces.1
login/po/: Makefile  Makefile.in
login/src/: Makefile  Makefile.am  Makefile.in  Reclamation.txt  Reservationh.c  Reservations.c  Users.txt  addclient.c  addclient.h  addvol.c  addvol.h  afficher.c  afficher.h  agent.txt  ajouter.c  ajouter.h  callbacks.c  callbacks.h  client.txt  clientfid.c  clientfid.h  clientfidele.txt  clientx.txt  factures.txt  fonction.c  fonction.h  interface.c.bak  interface.h.bak  log.txt  login  main.c  msg.c  msg.h  msg.txt  reclamation.c  reclamation.h  reservation.c  reservation.h  reservation.txt  reservationh.h  (+10 more)
login/src/.deps/: Reservationh.Po  Reservations.Po  addclient.Po  addvol.Po  afficher.Po  ajouter.Po  callbacks.Po  clientfid.Po  fonction.Po  interface.Po  main.Po  msg.Po  reclamation.Po  reservation.Po  support.Po  twilio.Po  voiture.Po
